@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.tugafilmes" name="Tuga Filmes" version="1.0.2" provider-name="Anonymous">
+<addon id="plugin.video.tugafilmes" name="Tuga Filmes" version="1.0.3" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
