@@ -2,6 +2,7 @@
 <settings>
    <category label="Definições gerais">
 		<setting id="subs" type="bool" label="Embutir legendas" default="true"/>
+		<setting id="fanart" type="bool" label="Apresentar fanart" default="true"/>
    </category>
    <category label="Download">
 		<setting id="download-folder" type="folder" label="Pasta de Download" default=""/>
